tests/spec/emit/snapshots/interop_go_value_enum_type_alias.snap
---
source: tests/spec/emit/interop_matrix.rs
assertion_line: 828
description: "input: \nimport \"go:time\"\nimport \"go:fmt\"\n\nfn function() {\n  fmt.Println(\"march\", time.Month.March)\n}\n"
---
package main

import (
	"fmt"
	"time"
)

func function() {
	fmt.Println("march", time.March)
}
