tests/spec/emit/snapshots/interop_lambda_unit_body_against_interface_aliased_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/scheduler"
  
  fn make() -> scheduler.Cmd {
    || ()
  }
  
  fn main() {
    let _ = make()
  }
---
package main

import "example.com/scheduler"

func make_() scheduler.Cmd {
	return func() scheduler.Event {
		return nil
	}
}

func main() {
	make_()
}
