tests/spec/emit/snapshots/interop_lisette_fn_value_binds_to_annotated_go_fn_type.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:bufio"
  
  fn split_words(data: mut Slice<byte>, at_eof: bool) -> Result<(int, Slice<byte>), error> {
    bufio.ScanWords(data, at_eof)
  }
  
  fn main() {
    let annotated: bufio.SplitFunc = split_words
    let forwarded: bufio.SplitFunc = bufio.ScanWords
    let literal: bufio.SplitFunc = |data, at_eof| bufio.ScanWords(data, at_eof)
    let _ = annotated
    let _ = forwarded
    let _ = literal
  }
---
package main

import (
	"bufio"
	lisette "github.com/ivov/lisette/prelude"
)

func splitWords(data []byte, at_eof bool) (lisette.Tuple2[int, []byte], error) {
	ret, ret_1, ret_2 := bufio.ScanWords(data, at_eof)
	tup := lisette.MakeTuple2(ret, ret_1)
	var result lisette.Result[lisette.Tuple2[int, []byte], error]
	if ret_2 != nil {
		result = lisette.MakeResultErr[lisette.Tuple2[int, []byte], error](ret_2)
	} else {
		result = lisette.MakeResultOk[lisette.Tuple2[int, []byte], error](tup)
	}
	if result.Tag == lisette.ResultOk {
		return result.OkVal, nil
	}
	return lisette.Tuple2[int, []byte]{}, result.ErrVal
}

func main() {
	cb := splitWords
	var annotated bufio.SplitFunc = func(arg0 []byte, arg1 bool) (int, []byte, error) {
		ret, ret_1 := cb(arg0, arg1)
		return ret.First, ret.Second, ret_1
	}
	var forwarded bufio.SplitFunc = bufio.ScanWords
	var literal bufio.SplitFunc = func(data []byte, at_eof bool) (int, []byte, error) {
		return bufio.ScanWords(data, at_eof)
	}
	_ = annotated
	_ = forwarded
	_ = literal
}
