tests/spec/emit/snapshots/interop_lisette_fn_value_casts_to_go_fn_type.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:bufio"
  
  fn split_words(data: mut Slice<byte>, at_eof: bool) -> Result<(int, Slice<byte>), error> {
    bufio.ScanWords(data, at_eof)
  }
  
  fn main() {
    let _ = split_words as bufio.SplitFunc
    let _ = bufio.ScanWords as bufio.SplitFunc
  }
---
package main

import (
	"bufio"
	lisette "github.com/ivov/lisette/prelude"
)

func splitWords(data []byte, at_eof bool) (lisette.Tuple2[int, []byte], error) {
	ret, ret_1, ret_2 := bufio.ScanWords(data, at_eof)
	tup := lisette.MakeTuple2(ret, ret_1)
	var result lisette.Result[lisette.Tuple2[int, []byte], error]
	if ret_2 != nil {
		result = lisette.MakeResultErr[lisette.Tuple2[int, []byte], error](ret_2)
	} else {
		result = lisette.MakeResultOk[lisette.Tuple2[int, []byte], error](tup)
	}
	if result.Tag == lisette.ResultOk {
		return result.OkVal, nil
	}
	return lisette.Tuple2[int, []byte]{}, result.ErrVal
}

func main() {
	cb := splitWords
	_ = bufio.SplitFunc(func(arg0 []byte, arg1 bool) (int, []byte, error) {
		ret, ret_1 := cb(arg0, arg1)
		return ret.First, ret.Second, ret_1
	})
	_ = bufio.SplitFunc(bufio.ScanWords)
}
