tests/spec/emit/snapshots/interop_lisette_fn_value_with_tuple_error_result_adapts_to_go_callback_param.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:bufio"
  import "go:fmt"
  import "go:strings"
  
  fn split_words(data: Slice<byte>, at_eof: bool) -> Result<(int, Slice<byte>), error> {
    bufio.ScanWords(data, at_eof)
  }
  
  fn count(input: string, split: bufio.SplitFunc) -> int {
    let mut scanner = bufio.NewScanner(strings.NewReader(input))
    scanner.Split(split)
    let mut n = 0
    while scanner.Scan() {
      n += 1
    }
    n
  }
  
  fn main() {
    fmt.Println(count("one two three", split_words))
    fmt.Println(count("four five", bufio.ScanWords))
  }
---
package main

import (
	"bufio"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strings"
)

func splitWords(data []byte, at_eof bool) (lisette.Tuple2[int, []byte], error) {
	ret, ret_1, ret_2 := bufio.ScanWords(data, at_eof)
	tup := lisette.MakeTuple2(ret, ret_1)
	var result lisette.Result[lisette.Tuple2[int, []byte], error]
	if ret_2 != nil {
		result = lisette.MakeResultErr[lisette.Tuple2[int, []byte], error](ret_2)
	} else {
		result = lisette.MakeResultOk[lisette.Tuple2[int, []byte], error](tup)
	}
	if result.Tag == lisette.ResultOk {
		return result.OkVal, nil
	}
	return lisette.Tuple2[int, []byte]{}, result.ErrVal
}

func count(input string, split bufio.SplitFunc) int {
	scanner := bufio.NewScanner(strings.NewReader(input))
	scanner.Split(split)
	n := 0
	for scanner.Scan() {
		n++
	}
	return n
}

func main() {
	cb := splitWords
	fmt.Println(count("one two three", func(arg0 []byte, arg1 bool) (int, []byte, error) {
		result := lisette.ResultFromPair[lisette.Tuple2[int, []byte]](cb(arg0, arg1))
		if result.Tag == lisette.ResultOk {
			tup := result.OkVal
			return tup.First, tup.Second, nil
		}
		return 0, nil, result.ErrVal
	}))
	fmt.Println(count("four five", bufio.ScanWords))
}
